# HealthCareApiServer/HealthCare.Application/Models/Doctor/UpdateDoctorModel.cs
@@ -1,0 +1,10 @@
+﻿using HealthCare.Application.Models.Users;
+
+namespace HealthCare.Application.Models.Doctor
+{
+    public class UpdateDoctorModel
+    {
+        public int Id { get; set; }
+        public int DepartmentId { get; set; }
+    }
+}
